--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,24 @@ p {
     font-size: 18px;
 }
 
-div {
+.div1 {
+    margin-left: 90px;
+    float: left;
+    border-style: ridge;
+    border-color: white;
+    width: 591.5px;
+    height: 500px;
+}
+
+.div2 {
     display: inline-block;
     border-style: ridge;
     border-color: white;
     width: 591.5px;
     height: 500px;
+}
+
+.guessbox {
+    padding-top: 20px;
+    font-size: 20px;
 }
